--- a/App.razor
+++ b/App.razor
@@ -5,7 +5,7 @@
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
+            <p class="display-4">Ты как сюда попал?!</p>
         </LayoutView>
     </NotFound>
 </Router>
