--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -10,13 +10,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KirillPlusDota</title>
+    <title>Kirill+Dota</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <app>
+    <app class="jumbotron vertical-center text-center">
         <component type="typeof(App)" render-mode="ServerPrerendered" />
     </app>
 
