--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -17,7 +17,7 @@
 </head>
 <body>
     <app class="jumbotron vertical-center text-center">
-        <component type="typeof(App)" render-mode="ServerPrerendered" />
+        <component type="typeof(App)" render-mode="Server" />
     </app>
 
     <div id="blazor-error-ui">
